# mcp-project

./: .gitignore  README.md  instructions.md
.github/workflows/: backend-ci.yml  deploy-backend-cloud-run.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  README2.md  instructions2.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: chat.py  tools.py
backend/app/schemas/: chat.py  tools.py
backend/app/services/: agent_service.py  mcp_service.py
backend/tests/: test_agent_service.py  test_chat.py  test_health.py  test_mcp_service.py  test_tools.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  status-card.tsx  tool-list.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/lib/: api.ts
