[project]
name = "mcp-product-backend"
version = "0.1.0"
description = "FastAPI backend template for an MCP-based AI product"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai-agents>=0.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.7.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
